<resources>
    <string name="app_name">CoopAchievement</string>

    <!--Home Activity-->
    <string name="home_poor_expected_score">Poor Expected: %1$d</string>
    <string name="home_great_expected_score">Great Expected: %1$d</string>
    <string name="deleting">Deleting…</string>
    <string name="yes_option">Yes</string>
    <string name="no_option">No</string>

    <!--GameType Activity-->
    <string name="game_type_achievement_level">Level: </string>
    <string name="game_type_group_score">Score: %1$d</string>
    <string name="game_type_number_players">Players: %1$d</string>
    <string name="change_save">Please Save Changes</string>
    <string name="editing">Editing…</string>
    <string name="saving">Saving…</string>
    <string name="incomplete_field">Fields are Incomplete!</string>

    <!--Warning Alert Dialog-->
    <string name="warning_undo_message">Are you sure you want to undo all changes?</string>
    <string name="warning_undo_title">Cancel Changes</string>
    <string name="warning_delete_message">Are you sure you want to delete this item?</string>
    <string name="warning_delete_title">Delete Item</string>

    <!--ModifyGameActivity-->
    <string name="achievement_levels">Achievement Levels</string>
    <string name="achievement_level_reached">Achievement Level Reached</string>
    <string name="num_players">Number of Players</string>
    <string name="sum_scores">Input Player Scores</string>
    <string name="modify_converted_score">Converted Score: %1$d</string>
    <string name="icon_prefix">ic_gametype_</string>
    <string name="drawable">drawable</string>
    <string name="custom_tag">Custom</string>
    <string name="alert_dialog_yes">Yes</string>
    <string name="alert_dialog_no">No</string>
    <string name="restriction_invalid_score_values">Great score must be greater than Poor Score by at least 8!</string>
    <string name="restriction_invalid_score_inputs">One or more inputs are empty!</string>
    <string name="default_tag">Default</string>
    <string name="alert_dialog_returning">Returning…</string>
    <string name="add_new_game_title">Add New Game</string>
    <string name="edit_game_title">Edit Game</string>
    <string name="input_validation">Please Enter a Valid Input</string>
    <string name="converted_score_text">Converted Score:  —</string>
    <string name="empty_string" />
    <string name="empty_dash">—</string>
    <string name="min_score">Min Score: %1$d</string>
    <string name="set_difficulty">Set Game Difficulty</string>

    <!-- Achievement Levels -->
    <string name="achievement_level_title">View Achievement Levels</string>

    <!--Context Descriptions-->
    <string name="game_icon">Game Icon</string>

    <!--XML AddGameActivity-->
    <string name="enter_game_name">Enter Game Name</string>
    <string name="ex_chess">ex. Chess</string>

    <!--XML GameListActivity-->
    <string name="btn_add_new_game">ADD NEW GAME</string>
    <string name="empty_array_desc">No Games have\nbeen registered yet!\n\nAdd a new game below!</string>
    <string name="et_title_placeholder">Name</string>
    <string name="empty_arrow">Empty Arrow</string>
    <string name="btn_edit">Edit</string>
    <string name="btn_save">Save</string>
    <string name="btn_delete">Delete</string>
    <string name="poor_score_title">Poor Score</string>
    <string name="great_score_title">Great Score</string>
    <string name="btn_view_levels">View Levels</string>
    <string name="btn_icon_change">Icon Change Button</string>

    <!--XML HomeActivity-->
    <string name="title">CO-OP GAMES</string>
    <string name="btn_add_new_game_type">ADD NEW GAME TYPE</string>
    <string name="empty_game_type_array_desc">No Game Types have\nbeen registered yet!\n\nAdd a new type below!</string>

    <!--XML clvAchievementList-->
    <string name="min_score_reach">Min Score: __</string>
    <string name="achievement_title">Achievement Title</string>

    <!--XML cvDisplayGameList-->
    <string name="game_date">Game Date</string>
    <string name="total_group_score">Total Group Score</string>
    <string name="num_of_players">Num of Players</string>
    <string name="achievement">Achievement</string>

    <!--XML cvDisplayGameTypes-->
    <string name="game_type_icon">Game Type Icon</string>
    <string name="game_type">Game Type #</string>
    <string name="poor_score">Poor Score:</string>
    <string name="great_score">Great Score:</string>
    <string name="delete_button">Delete Button</string>

    <!--XML AddGameTypeActivity-->
    <string name="high_number_hint">High Number</string>
    <string name="low_number_hint">Low Number</string>
    <string name="enter_expected_great_score">Enter Expected Great Score</string>
    <string name="enter_expected_poor_score">Enter Expected Poor Score</string>
    <string name="select_your_game_icon">Select Your Game Icon!</string>
    <string name="converted_score">Converted Score:  —</string>
    <string name="achievement_prefix">c</string>
    <string name="zero">0</string>
    <string name="number_of_players">Number Of Players</string>

    <!--dropdown menu selection-->
    <string-array name="difficulty">
        <item>Easy</item>
        <item>Normal</item>
        <item>Hard</item>
    </string-array>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="settings">Settings</string>
    <string name="select_theme">Select Theme:</string>


    <string name="player_name">Player %1$d</string>
    <string name="total_score">Total Score: %1$d</string>
    <string name="reinput_player_score">Re-input Player Scores</string>
    <string name="ok">OK</string>
    <string name="player_list">Player List</string>
    <string name="faces">Faces</string>
    <string name="animals">Animals</string>
    <string name="spongebob">Spongebob</string>
    <string name="rank_count">Got\n%1$dx</string>
    <string name="achievement_faces">Faces for Achievement theme</string>
    <string name="achievement_animals">Animals for Achievement theme</string>
    <string name="achievement_sb1">Spongebob 1 for Achievement theme</string>
    <string name="achievement_sb2">Spongebob 2 for Achievement theme</string>
    <string name="achievement_sb3">Spongebob 3 for Achievement theme</string>
    <string name="achievement_sb4">Spongebob 4 for Achievement theme</string>
    <string name="achievement_sb5">Spongebob 5 for Achievement theme</string>
    <string name="achievement_sb6">Spongebob 6 for Achievement theme</string>
    <string name="achievement_sb7">Spongebob 7 for Achievement theme</string>
    <string name="achievement_sb8">Spongebob 8 for Achievement theme</string>
    <string name="game_icons">Game Type Icons</string>
    <string name="wallpaper">App Background</string>
    <string name="gear_iron">Gear Icon</string>
    <string name="swap_icon">Swap Icon</string>
    <string name="audio">Clapping Audio</string>
    <string name="dev_name">Aneel, June, Ricky, Teeya</string>
    <string name="group_name">App Developed By: Beryllium</string>
    <string name="about">About</string>
    <string name="max_level_reached">Max Level Reached</string>
    <string name="score_to_next_lvl">\Score to Next Level: \</string>
    <string name="score">\Score: \</string>
    <string name="congratz_title">Congratulations!</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="changeTheme">Change Theme</string>
    <string name="please_take_a_photo">Please take a game photo</string>
    <string name="input_player_score">Input Player Score</string>
    <string name="change_theme">Change Theme</string>
    <string name="next_achievement">\"Next Achievement: \"</string>


</resources>