<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvDisplayGames"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="10dp"
    app:cardCornerRadius="10dp"
    app:cardElevation="10dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="100dp">

        <ImageView
            android:id="@+id/ivGameTypeImage"
            android:layout_width="84dp"
            android:layout_height="84dp"
            android:layout_marginVertical="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/game_type_icon"
            app:srcCompat="@drawable/ic_launcher_foreground"
            tools:ignore="ImageContrastCheck" />

        <TextView
            android:id="@+id/tvGameType"
            android:layout_width="295dp"
            android:layout_height="23dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="48dp"
            android:layout_toEndOf="@+id/ivGameTypeImage"
            android:text="@string/game_type"
            android:textAlignment="viewStart"
            android:textColor="#0097A7"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:id="@+id/divider2"
            android:layout_width="187dp"
            android:layout_height="4dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="6dp"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="42dp"
            android:layout_toEndOf="@+id/ivGameTypeImage"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/tvPoorExpectedScore"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="15dp"
            android:layout_toEndOf="@+id/ivGameTypeImage"
            android:text="@string/poor_score"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvGreatExpectedScore"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="15dp"
            android:text="@string/great_score"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/btnRemoveType"
            android:layout_width="51dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="7dp"
            app:srcCompat="@drawable/ic_baseline_delete_forever_24"
            android:contentDescription="@string/delete_button" />

        <View
            android:id="@+id/divider3"
            android:layout_width="84dp"
            android:layout_height="3dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="88dp"
            android:background="@color/black"
            android:backgroundTint="#2196F3" />

        <View
            android:id="@+id/divider13"
            android:layout_width="84dp"
            android:layout_height="4dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="8dp"
            android:background="@color/black"
            android:backgroundTint="#2196F3" />

        <View
            android:id="@+id/divider14"
            android:layout_width="3dp"
            android:layout_height="83dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-2dp"
            android:layout_marginBottom="8dp"
            android:layout_toEndOf="@+id/ivGameTypeImage"
            android:background="@color/black"
            android:backgroundTint="#2196F3" />

        <View
            android:id="@+id/divider15"
            android:layout_width="3dp"
            android:layout_height="83dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-13dp"
            android:layout_marginBottom="8dp"
            android:layout_toStartOf="@+id/ivGameTypeImage"
            android:background="@color/black"
            android:backgroundTint="#2196F3" />


    </RelativeLayout>

</androidx.cardview.widget.CardView>